--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MapsFranli</string>
+    <string name="app_name">MapsFran</string>
     <string name="title_activity_maps">MapsActivity</string>
 </resources>
